# Croc

./: .gitignore  CMakeLists.txt  README.md  UniChar.d  beer.md  blerf.rsp  builddocs.bat  buildit.bat  closure.md  compile.bat  confset.md  croc.cpp  croc.ddoc  croc2lua.md  croc2lua.mdown  crocc.brf  crocc.d  crocgrammar.txt  croci.brf  croci.d  crocproj.sublime-project  crocproj.sublime-workspace  croctest.brf  croctest.cpp  croctest.d  csv2wiki.d  depgrapher.croc  depgrapher.md  docs.croc  docs.rrf  dsss.conf  index.html  itertools.md  lib.brf  lmarkov.md  makeimpgraph.bat  mdcl.brf  mdcl.d  mdcl.opt  minid.d  (+20 more)
addons/: gl.d  gl_ext.d  gl_wrap.d  pcre.d  sdl.d
arc_wrap/: all.d  font.d  input.d  sound.d  window.d
attic/: minid.txt  minid_old.d
benchmark/: binarytrees.croc  binarytrees.md  chameneos.croc  chameneos.md  cheapconcurrency.croc  cheapconcurrency.md  fannkuch.croc  fannkuch.md  fasta.croc  fasta.md  mandelbrot.croc  mandelbrot.md  nsieve.croc  nsieve.md  nsievebits.croc  nsievebits.md  partialsums.croc  partialsums.md  pidigits.croc  pidigits.md  recursive.croc  recursive.md  sumcol-input.txt  sumfile.croc  sumfile.md
croc/: api.d  api_checks.d  api_debug.d  api_interpreter.d  api_stack.d  base_alloc.d  base_deque.d  base_gc.d  base_hash.d  base_metamethods.d  base_opcodes.d  base_writebarrier.d  compile.bat  compiler.d  compiler_ast.d  compiler_astvisitor.d  compiler_codegen.d  compiler_docgen.d  compiler_funcstate.d  compiler_lexer.d  compiler_parser.d  compiler_semantic.d  compiler_types.d  ex.d  ex_bind.d  ex_commandline.d  ex_doccomments.d  ex_format.d  ex_json.d  ex_library.d  ex_serialization.d  interp.d  interpreter.d  run.bat  serialization.d  serialization_simple.d  stackmanip.d  stdlib_array.d  stdlib_ascii.d  stdlib_base.d  (+54 more)
docs/: Doxyfile  DoxygenLayout.xml  bind.html  compiler.html  crocstyle.css  footer.html  header.html  mem1.txt  mem2.txt  mem3.txt  mem4.txt  mem5.txt  minid.alloc.html  minid.api.html  minid.ast.html  minid.bind.html  minid.commandline.html  minid.compiler.html  minid.ex.html  minid.gc.html  minid.html  minid.interpreter.html  minid.minid.html  minid.serialization.html  minid.types.html  minid.utils.html  minid.vm.html  modules1.txt  types.html  utils.html
downloads/: Croc.chl  MiniD2.chl  croc.lang  croc.vim  croc.xml  minid.lang  minid.vim  minid.xml
html_doc/: index.html
imports/: test.md
minid/: alloc.d  api.d  api_checks.d  api_debug.d  array.d  arraylib.d  ast.d  astvisitor.d  base_alloc.d  base_gc.d  base_hash.d  base_opcodes.d  baselib.d  bind.d  charlib.d  classobj.d  codegen.d  commandline.d  compile.bat  compiler.d  compiler_ast.d  compiler_astvisitor.d  compiler_codegen.d  compiler_lexer.d  compiler_parser.d  compiler_semantic.d  compiler_types.d  compilertypes.d  debuglib.d  ex.d  ex_bind.d  ex_commandline.d  ex_format.d  ex_json.d  func.d  funcdef.d  gc.d  hash.d  hashlib.d  instance.d  (+77 more)
samples/: ackermann.croc  ackermann.md  antimatroids.croc  arctest.md  arrays.md  autoctor.croc  beer.croc  beer.md  factorial.croc  factorial.md  glfwtest.croc  imguitest.croc  interfaces.croc  lmarkov.croc  lmarkov.md  lzw.croc  lzw.md  (+25 more)
src/: CMakeLists.txt
src/croc/: README.md  api.h  apiex.h  apifuncs.h  apitypes.h  mainpage.dox  types.cpp  types.hpp  utf.cpp  utf.hpp  utils.cpp  utils.hpp
src/croc/addons/: al.cpp  al.hpp  all.hpp  gl.cpp  gl.hpp  glfw.cpp  glfw.hpp  il.cpp  il.hpp  imgui.cpp  pcre.cpp
src/croc/api/: apichecks.hpp  array.cpp  basic.cpp  calls.cpp  class.cpp  compiler.cpp  debug.cpp  eh.cpp  funcdef.cpp  function.cpp  gc.cpp  mem.cpp  memblock.cpp  namespace.cpp  nativeref.cpp  reflection.cpp  stack.cpp  table.cpp  thread.cpp  typequeries.cpp  valuetypes.cpp  variables.cpp  vm.cpp  weakref.cpp
src/croc/base/: alloc.hpp  darray.hpp  deque.cpp  deque.hpp  gc.cpp  gc.hpp  gcobject.hpp  hash.hpp  leakdetector.cpp  leakdetector.hpp  memory.cpp  memory.hpp  metamethods.cpp  metamethods.hpp  opcodes.cpp  opcodes.hpp  sanity.hpp  writebarrier.cpp  writebarrier.hpp
src/croc/compiler/: ast.cpp  ast.hpp  astvisitor.cpp  astvisitor.hpp  builder.cpp  builder.hpp  codegen.cpp  codegen.hpp  docgen.cpp  docgen.hpp  docparser.cpp  docparser.hpp  lexer.cpp  lexer.hpp  luagenvisitor.cpp  luagenvisitor.hpp  luaoutput.cpp  luaoutput.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  types.cpp  types.hpp
src/croc/ex/: common.cpp  compilation.cpp  docs.cpp  imports.cpp  library.cpp  paramchecks.cpp  strbuffer.cpp
src/croc/ext/: convert.cpp  glad.cpp  jhash.cpp  jhash.hpp
src/croc/ext/glad/: glad.hpp
src/croc/ext/il/: il.h  ilu.h
src/croc/ext/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.cpp.bak  imgui.h  imgui.h.bak  imgui_user.inl
src/croc/internal/: apichecks.hpp  basic.cpp  basic.hpp  calls.cpp  calls.hpp  class.cpp  class.hpp  debug.cpp  debug.hpp  eh.cpp  eh.hpp  format.cpp  format.hpp  gc.cpp  gc.hpp  interpreter.cpp  interpreter.hpp  stack.cpp  stack.hpp  thread.cpp  thread.hpp  variables.cpp  variables.hpp
src/croc/stdlib/: all.hpp  array.cpp  ascii.cpp  compiler.cpp  console.cpp  console.croc  debug.cpp  docs.cpp  docs.croc  doctools.cpp  doctools_console.croc  doctools_output.croc  doctools_trac.croc  env.cpp  exceptions.cpp  file.cpp  gc.cpp  hash.cpp  hash_weaktables.croc  json.cpp  math.cpp  memblock.cpp  misc.cpp  misc_vector.cpp  modules.cpp  modules.croc  object.cpp  os.cpp  path.cpp  repl.cpp  repl.croc  serialization.cpp  serialization.croc  stream.cpp  stream.croc  string.cpp  string_stringbuffer.cpp  text.cpp  text.croc  thread.cpp  (+1 more)
src/croc/stdlib/helpers/: format.cpp  format.hpp  json.cpp  json.hpp  oscompat.cpp  oscompat.hpp  register.cpp  register.hpp
src/croc/types/: array.cpp  array.hpp  base.cpp  base.hpp  class.cpp  class.hpp  funcdef.cpp  funcdef.hpp  function.cpp  function.hpp  instance.cpp  instance.hpp  memblock.cpp  memblock.hpp  namespace.cpp  namespace.hpp  string.cpp  string.hpp  table.cpp  table.hpp  thread.cpp  thread.hpp  weakref.cpp  weakref.hpp
src/croc/util/: array.hpp  misc.cpp  misc.hpp  rng.cpp  rng.hpp  str.cpp  str.hpp  utf.cpp  utf.hpp
(+308 files in other folders)
